# gametheory-engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/core/: game_interface.py
src/finance/: translator.py
src/games/poker/: kuhn_cfr.py
src/visualization/: strategy_viewer.py
tests/: test_kuhn_cfr.py
