[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gametheory-engine"
version = "0.1.0"
description = "Unified game theory framework for Chess, Shogi, Poker, and Go with quantitative finance applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Charles"}
]
keywords = [
    "game-theory",
    "cfr",
    "counterfactual-regret-minimization",
    "nash-equilibrium",
    "poker",
    "chess",
    "go",
    "quantitative-finance",
    "market-making",
    "algorithmic-trading"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black>=22.0",
    "flake8>=4.0",
    "mypy",
]
viz = [
    "matplotlib>=3.4",
    "plotly>=5.0",
]
all = [
    "gametheory-engine[dev,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/gametheory-engine"
Documentation = "https://github.com/yourusername/gametheory-engine#readme"
Repository = "https://github.com/yourusername/gametheory-engine"

[project.scripts]
gametheory = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
